# latent-symmetry

./: .fasignore  .gitignore  10_hidden_layers_benchmark_results.csv  20_hidden_layers_benchmark_results.csv  4_hidden_layer_benchmark_results.csv  4_hidden_layers_benchmark_results.csv  4x4_kps_jan17_aug.pt  4x4_layer1.pt  4x4_layer1_strong.pt  4x4_none.pt  6_hidden_layers.csv  6_hidden_layers_benchmark_results copy.csv  6_hidden_layers_benchmark_results.csv  6_hidden_layers_seed42.csv  8_hidden_layers_benchmark_results.csv  CONVEX_HULL_ANALYSIS.md  FAIRNESS_CHECK.md  README.md  analyze_benchmark.py  analyze_convex_hull_symmetry.py  analyze_layer_symmetry.py  analyze_layerwise_symmetry.py  analyze_per_kp.py  analyze_weights.py  benchmark.py  compare_lambdas.py  compare_layers.py  compute_efp_orbit_variance.py  compute_input_scale.py  compute_loss.py  data.py  data_convex_hull.py  diagnose_invariance.py  diagnose_layer_symmetry.py  energyflow  fetch_fas.sh  investigate_efp_symmetry.py  kinematic_measure.md  kp_histogram.py  layers=4_seed=42.csv  (+29 more)
config/: README.md  config.yaml  efp_presets.yaml
data/: kp_dataset.py
docs/: runs.sh
latsym.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
models/: __init__.py  deepsets.py  transformer.py
results/: layers=1x128_lr=3e-4_seed=1.csv  layers=1x128_lr=6e-4_seed=1.csv  layers=4x256_lr=1e-4_seed=1.csv  layers=4x256_lr=1e-4_seed=10.csv  layers=4x256_lr=1e-4_seed=11.csv  layers=4x256_lr=1e-4_seed=12.csv  layers=4x256_lr=1e-4_seed=13.csv  layers=4x256_lr=1e-4_seed=14.csv  layers=4x256_lr=1e-4_seed=15.csv  (+316 more)
scripts/: make_gif.py  (+6 more)
(+696 files in other folders)
